bk_ida/gccida/g1/unroll_loop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:703:4: error: expected ';' after expression
rtx v10; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:703:5: error: use of undeclared identifier 'v10'
rtx v10; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:708:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:708:5: error: use of undeclared identifier 'v15'; did you mean 'v11'?
rtx v15; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:704:9: note: 'v11' declared here
__int16 v11; // ax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:710:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:710:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:727:4: error: expected ';' after expression
rtx v34; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:727:5: error: use of undeclared identifier 'v34'
rtx v34; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:732:4: error: expected ';' after expression
rtx v39; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:732:5: error: use of undeclared identifier 'v39'
rtx v39; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:734:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:734:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:757:4: error: expected ';' after expression
rtx v64; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:757:5: error: use of undeclared identifier 'v64'
rtx v64; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:763:6: error: use of undeclared identifier 'v70'
rtx *v70; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:765:6: error: use of undeclared identifier 'v72'
rtx *v72; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:768:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types v75; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:770:4: error: expected ';' after expression
rtx v77; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/unroll.c:770:5: error: use of undeclared identifier 'v77'
rtx v77; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/unroll_loop/src/obj/unroll.o] Error 1
